# user-service

./: .env.example  .env.security.example  .env.test  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  SERVICE_ERRORS_IMPLEMENTATION.md  docker-compose.yml  run_tests.sh  sqlx-data.json
.sqlx/: query-05348fda02b4b51b0ec2719d27ee3d28cf00fda33cb1596d1ed0b7b21043ed28.json  query-05f037ad2dec290d2a06b9600c27b1fd3bbf39fa7a2f738bcd15b28e1e0c1a63.json  query-06bd6f7f250bc989ba7536af6626f05088ff3851afca213e1239dfb80994c134.json  query-10db942e8c8b9df3deb1a91a9d47df737b428d1dad50c36c663fb0558b612932.json  query-113b62f9330220ddd41f694c86abdb5d4d974edf40ab5d774ab56ece537327b5.json  query-12d2480ff04476728a3b4cdbdab077a5a7f49a272a20356cba451d66c35ce129.json  query-187dd27f838065c626e6e806336c3670c6f1cf21472f3fbd9aed27923cff9579.json  query-1a5e087d94390a561661eaf9dc975da71c14e4287ebcdaa59e4ee9f136e21ca1.json  query-1e0089139f79009f1776c46639c6234649637df3712a8d81519a43153f88d93c.json  query-1e1bebeb69f98aea2815b57294e048f2538ced46048cc28394749aac4a6abc11.json  query-1ee9a1aa11d31c0c892e5bb89b00c32cb1acba4193bba9ebad50a4ba85a3061e.json  query-1f24476d497b7bcd3bc16ebc0ae234b57ac0e17ec0300909e00d8cc404af1a63.json  query-2120ecddccf236264af4f5fc63249268c7166c3cf7903c8f479dede63ab962f7.json  query-2806131337c878f78e0f33f0f6210ec714765647caf629be2c883916cf94e961.json  query-283571d3b1b0dde73ee3e95e7caa2ac4742fba157a339e756e6cf268912a6e37.json  query-2af1d14ffdca2af3a66f6c137654724aa8f369ce1b7c2efc65f413624a056002.json  query-2ec70c878be04feff4521059a96b6634d2b1a746222ec5cc41b69d12868cf614.json  query-321a739903a166528f28dc1b84ca370ae49cf1690f2d4086109e9ca53086a735.json  query-324db57df1629aedb2fccccbea66cd883f5b5a6423619041266ea8ed2a9f5d03.json  query-37f92625f4fb012a92fe3f5f62189e82de6814fd8b8558c13e12d8f777d4c70b.json  query-38e37245e0619dc343048b5ec4e7e4972b8bb4c476e09a01b00aa04987d6c613.json  query-38ea363d49fbd9a5f70c1aa48764336c52e8b7a647f77e44913e564c619e0b49.json  query-3aa7df8c277e72b36039256badaaf435c75119c9249d65bf739cd21658517bac.json  query-3b0641c855319a8394c083a049c0a85aa2700864484fd97a6ef351b4649f7ec6.json  query-3b1a4a0ab85e5c0ca5682eebf5b819fc88a088eeaf68809b1d6ff8833a944dc1.json  query-428425944bbd3b7f61be7fb4becfba77a4c33fdce04ec9e1b11f1edb656427b3.json  query-435545fd41a1ff058ce967e8b52d0544b23c8f7679eeadaf918e3c5d45b441af.json  query-4555c26ed5686e42d6433c2d4cc632ce267a6a1f4a58162fc43aaac24ea07ac8.json  query-46e917cc9f9d265861d3b9eb47f06e81e1182adae0e9d98ce705bcb7c12906ac.json  query-4db0da630105ae1827895a69ffa34ab7acebc4ba8712555bca13fd8f56c8ccb8.json  query-4e906592035032e6d1c0cee0d8c7b34bdfc054d70e97f70600b8b6b98b80bf4e.json  query-506c17eba7dff1e3ebbb130dda8c102402aae9871e7c9e35be5a6ef983e9c0ea.json  query-507a54f272d444332d239bae95a8dbd69cea8b2439f2508417541a0492db2e9d.json  query-509eb1183a53ea396a632ffb2873cb7f50b88f4a71a3b625b44a2b4a5067f48d.json  query-5ade646cb8025cb46c90f23c1da9c8f2aa536270beba0a2bf52b51697d341400.json  query-627b9cdf438973eedb3b9c6c7c19fb8bfc67ebfbdda2db6ba612fb616e5743f8.json  query-66236c05f842602b1f68261362f6e017a0a19774d8661f85a6849f6dc47072b7.json  query-665bc1731e2cb791bdc65849013274979e655c0da6585d43c5f6946424befee1.json  query-6f14a7661f2027f64c40feee40f49e12d057a0522b22885c567624e248f0457c.json  query-73e8cf256e799246c1206adcefce3ec9ddf2e5247311aff573e067337a102b5d.json  (+33 more)
docs/: API.md  API_DOCUMENTATION_FOR_LLM.md  IMPLEMENTATION_SUMMARY.md  MULTI_TENANT.md  MULTI_TENANT_SETUP.md  OTP_SIGNIN.md  database_schema_timestamps.md  oauth_integration.md  outlook-email-setup.md  webauthn.md
examples/: api_client.rs  basic_usage.rs  oauth_example.rs  passwordless_demo.rs  test_email_config.rs
scripts/: setup.sh  (+1 more)
(+52 files in other folders)
