[package]
name = "user-service"
version = "0.1.0"
edition = "2021"
authors = ["Nicholas Martin <nick@example.com>"]
description = "A standalone user management service for microservices architecture"
license = "MIT"
repository = "https://github.com/nickmartinwebdev/user-service"
keywords = ["user", "service", "microservice", "rust", "api"]
categories = ["web-programming", "authentication"]

[lib]
name = "user_service"
path = "src/lib.rs"

[[bin]]
name = "user-service"
path = "src/main.rs"

[dependencies]
sqlx = { version = "0.8.6", features = [
    "runtime-tokio-rustls",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
    "macros",
    "ipnetwork",
] }
tokio = { version = "1.47.1", features = ["full"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15"
bcrypt = "0.15"
thiserror = "1.0"
anyhow = "1.0"
validator = { version = "0.18", features = ["derive"] }
regex = "1.10"
log = "0.4"
env_logger = "0.10"
axum = "0.8"
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
hyper = { version = "1.0", features = ["full"] }
rand = "0.8"
sha2 = "0.10"
jsonwebtoken = "9.2"
base64 = "0.22"
lettre = { version = "0.11", features = [
    "tokio1-native-tls",
    "smtp-transport",
    "pool",
    "hostname",
    "builder",
] }
tera = "1.19"
oauth2 = "4.4"
reqwest = { version = "0.12", features = [
    "json",
    "rustls-tls",
], default-features = false }
url = "2.5"
webauthn-rs = { version = "0.5", features = [
    "danger-allow-state-serialisation",
] }
webauthn-rs-proto = "0.5"

[features]
default = []
test-helpers = []

[dev-dependencies]
axum-test = "17.2"
tokio-test = "0.4"
reqwest = { version = "0.12", features = ["json"] }
sqlx = { version = "0.8.6", features = [
    "runtime-tokio-rustls",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
    "macros",
] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 0
debug = true
